-- Add API for Programs by Tag and Resolve issue of cross button not visible in Request Demo modal in Responsiveness

--- a/src/assets/scss/components/demoModal.scss
+++ b/src/assets/scss/components/demoModal.scss
@@ -16,6 +16,26 @@
           margin-top: 0px;
           margin-right: 0px;
         }
+
+      }
+      .user-type-label{
+        .ant-form-item-label{
+          width: 110px;
+          text-align: left;
+        }
+        @media screen and (max-width: 575px) {
+          .ant-form-item-label{
+            width: unset;
+            display: flex;
+            margin-right: 20px;
+            &:after{
+              content: ':';
+              position: relative;
+              top: -0.5px;
+              margin: 0 8px 0 2px;
+            }
+          }
+        }
       }
       .info-text{
         margin-top: 20px;
