--- a/src/assets/scss/pages/header.scss
+++ b/src/assets/scss/pages/header.scss
@@ -781,10 +781,6 @@
   .iframe-video {
     height: 100% !important;
   }
-  .ant-modal-close {
-    top: -30% !important;
-    right: -12% !important;
-  }
 }
 
 .video-modal-class {
